Mudei o table-layout para fixed deixando todas as colunas com espaçamento igual e depois usei text-align: center, alinhando todo o conteudo das <td> ao centro, além disso mudei o display do #back-button para block e alinhei tanto ele quanto o table com margin: 0 auto; , além disso dei um margin-top de 180px para o #back-button

--- a/semana1/bugfixes/index.css
+++ b/semana1/bugfixes/index.css
@@ -106,7 +106,10 @@ div:last-child {
 }
 
 table {
+    margin: 0 auto;
     width: 60%;
+    table-layout: fixed;
+    text-align: center;
 }
 
 td button {
@@ -152,6 +155,9 @@ td img {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+
+    display: block;
+    margin: 180px auto 0;
 }
 
 #back-button:hover {
